added points for nisser texture

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,11 @@
             </div>
         </ul>
     </nav>
+  <!-- <div class="information__point">
+        <a href="#" class="information__point-label" id="skatepark-label"></a>
+        <p class="information__point-text" id="skatepark-text">Nissedal skatepark</p>
+    </div>
+    --> 
 </body>
 <script src="https://kit.fontawesome.com/60597f2f35.js" crossorigin="anonymous"></script>
 </html>
