--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,46 @@
     <div class="locations">
         <div class="locations__nisser">
             <div class="locations__nisser-aktivitesplassen hidden information-box on-top">
-                <i class="fa-solid fa-xmark" id="exit"></i>
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
                 <h2 class="locations-titles">Aktivitetsplassen</h2>
-                <p class="locations-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil placeat ducimus vero dolores nam unde vel quia. Dicta, odio voluptas.</p>
+                <p class="locations-info">På aktivitetsplassen rundt skoleområdet er det litt for alle. vi har skatepark, fotballbane, volleyballbane og lekeområde for de minste</p>
+            </div>
+            <div class="locations__nisser-brygga hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Brygga</h2>
+                <p class="locations-info">Brygga ligger nær bensinpumpe oppe ved butikken. den er drevet av bryggelaget, de prøver også få til en utkjøringsrampe og uteområde fremover, her er det også mulig og få leid båtplass</p>
+            </div>
+            <div class="locations__nisser-kyrkjeneset hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Kyrkjeneset camping</h2>
+                <p class="locations-info">Campingen ligger idyllisk til ved stranda i sentrum, det blir lagt ut brygge til stuping og vanntrampoline om sommeren. her er det ofte mye traffik om sommeren. det er sanitæranlegg ved campingen.</p>
+            </div>
+            <div class="locations__nisser-torgrimsfjell hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Torgrimsfjell</h2>
+                <p class="locations-info">Dette er en populær natursti det du passerer noen gamle husmannsplasser i bygda. Det er godt oppmerket sti fra start til slutt. området har også ganske god tilgang på sopp og bær.</p>
+            </div>
+            <div class="locations__nisser-lauvdalsfjell hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Lauvdalsfjell</h2>
+                <p class="locations-info">Her starter du i samme løype som naturstien. det er en lengre tur men med utrolig fin utsikt. her passer du også de gamle husmannsplassene</p>
+            </div>
+        </div>
+        <div class="locations__kirka">
+            <div class="locations__kirka-kirke hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Nissedal kirke</h2>
+                <p class="locations-info">Korskirke bygd i 1756. Kirka er bygget i tre, og har 270 plasser</p>
+            </div>
+            <div class="locations__kirka-gjestiveriet hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Gjestiveriet</h2>
+                <p class="locations-info">Fint lokale som er mulig å leie til konfirmasjoner eller andre samlinger</p>
+            </div>
+            <div class="locations__kirka-arnfinnbrygga hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Arnfinnbrygga</h2>
+                <p class="locations-info">Brygga er ett stoppested for MS Fram, som er en båt bygd i 1907. Den var tidligere brukt til tømmerfløting, men er går idag sightseeing langs Nisser og vråvatn</p>
             </div>
         </div>
     </div>
