--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,10 @@
         <ul class="places__ul split">
             <div class="locations">
                 <i class="fa-solid fa-xmark" id="exit"></i>
-                <li class="places__ul-li" id="nisser">Nisser</li>
-                <li class="places__ul-li" id="stranda">Stranda</li>
-                <li class="places__ul-li" id="framnes">Framnes</li>
-                <li class="places__ul-li" id="skeimo">skeimo</li>
+                <li class="places__ul-li" id="nisser">Framnes</li>
                 <li class="places__ul-li" id="ferjesundet">Ferjesundet</li>
                 <li class="places__ul-li" id="kirka">Kirka</li>
+                <li class="places__ul-li" id="skeimo">Skeimo</li>
             </div>
             <div class="weather split">
                 <p id="weather__description"><img src="#" class="weather__icon" id="icon"></p>                            
@@ -73,6 +71,46 @@
                 <i class="fa-solid fa-xmark" id="info-exit"></i>
                 <h2 class="locations-titles">Arnfinnbrygga</h2>
                 <p class="locations-info">Brygga er ett stoppested for MS Fram, som er en båt bygd i 1907. Den var tidligere brukt til tømmerfløting, men er går idag sightseeing langs Nisser og vråvatn</p>
+            </div>
+        </div>
+        <div class="locations__ferjesundet">
+            <div class="locations__ferjesundet-vikinggrav hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Viking-grav</h2>
+                <p class="locations-info">her ligger det en gammel grav. du må stort sett bruke båt for og komme dit. Historien bak grava er veldig uvisst.</p>
+            </div>
+            <div class="locations__ferjesundet-ferja hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Fjoneferja</h2>
+                <p class="locations-info">MF Nissen er norges minste kabelferje. Den går imellom Fjone og Nissedal. Ferja går hver hele time om sommeren fra til kl 22, for rutetid utenom sesongen se Nissedal Komunne sine nettsider</p>
+            </div>
+            <div class="locations__ferjesundet-vikcamping hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Vik Camping</h2>
+                <p class="locations-info">Campingen ligger flott til rett ved Nisser. Campingen har kiosk, sanitæranlegg og ligger nærme turstier samt gode badeplasser. det er og en utkjøringsrampe for båt</p>
+                <a href="https://vikcamping.no">Campingen nettside</a>
+            </div>
+            <div class="locations__ferjesundet-ferjesundetcafe hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Ferjesundet Cafe</h2>
+                <p class="locations-info">Ett populært samlingpunkt om sommeren, det tilbys servering og mat. det hender også att det er live musikk eller andre aktiviter. spisested trekker til seg folk langs hele nisser.</p>
+            </div>
+            <div class="locations__ferjesundet-vikodden hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Vikodden</h2>
+                <p class="locations-info">Ett flott tursted med godt merka løype hele veien rundt. det er også ett bryggeanlegg. badestrand og utkjøringsplass for båt i området. naturstien er 2km lang</p>
+            </div>
+        </div>
+        <div class="locations__skeimo">
+            <div class="locations__skeimo-hegefjell hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Hægefjell</h2>
+                <p class="locations-info">Dette er det høyeste fjellet i området, 1021 moh. Ofte vist på 71grader nord. Du kan gå fra Vrådal ved skisenteret, eller fra fjone. du burde regne med 2.5t opp til toppen. det er og muligheter for fjellklatring</p>
+            </div>
+            <div class="locations__skeimo-rindefjell hidden information-box on-top">
+                <i class="fa-solid fa-xmark" id="info-exit"></i>
+                <h2 class="locations-titles">Håvenuten</h2>
+                <p class="locations-info">En flott topptur! med panorama utsikt over Nisser, fra Treungen i sør til Vrådal i nord. Håvenuten liger 822 moh.</p>
             </div>
         </div>
     </div>
